# kneural

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/civ_impact/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/civ_impact/data/: civ_impact_data.csv
src/simple_approximation/: Makefile  cmake_install.cmake
